unpackaged/main/default/objects/Multi_Touch_Attribution__c/Multi_Touch_Attribution__c.object-meta.xml
<CustomObject>
    <description>Stores the Marketing Mult-Touch Attribution model (production.dbt_mart.rpt_sfdc_campaign_efficiency) that makes up the Retool dashboard called SFDC Campaign Efficiency: https://admin.retool.dev/app/sfdc-campaign-dash?finishedOAuth=true</description>
    <label>Multi-Touch Attribution</label>
    <nameField>
        <label>MTA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Multi-Touch Attributions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>