unpackaged/main/default/objects/Multi_Touch_Attribution__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Multi-Touch Attributions</relationshipLabel>
    <relationshipName>Multi_Touch_Attributions</relationshipName>
    <type>Lookup</type>
</CustomField>