unpackaged/main/default/objects/Multi_Touch_Attribution__c/fields/Account_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Segment__c</fullName>
    <formula>TEXT(Account__r.Segment__c)</formula>
    <label>Account Segment</label>
    <type>Text</type>
</CustomField>