unpackaged/main/default/objects/Multi_Touch_Attribution__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Multi-Touch Attributions</relationshipLabel>
    <relationshipName>Multi_Touch_Attributions</relationshipName>
    <type>Lookup</type>
</CustomField>