unpackaged/main/default/objects/Multi_Touch_Attribution__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Multi-Touch Attributions</relationshipLabel>
    <relationshipName>Multi_Touch_Attributions</relationshipName>
    <type>Lookup</type>
</CustomField>