unpackaged/main/default/objects/Multi_Touch_Attribution__c/fields/Conversion_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Subtype__c</fullName>
    <description>Contraction, Expansion, Flat, New, Pilot, Upsell

production.dbt_mart.rpt_sfdc_campaign_efficiency

External Systems Utilization: Databricks</description>
    <label>Conversion Subtype</label>
    <length>150</length>
    <type>Text</type>
</CustomField>