unpackaged/main/default/objects/Multi_Touch_Attribution__c/fields/Moment__c.field-meta.xml
<CustomField>
    <fullName>Moment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Moment</label>
    <referenceTo>Moment__c</referenceTo>
    <relationshipLabel>Multi-Touch Attributions</relationshipLabel>
    <relationshipName>Multi_Touch_Attributions</relationshipName>
    <type>Lookup</type>
</CustomField>