unpackaged/main/default/objects/Multi_Touch_Attribution__c/fields/Moment_Date__c.field-meta.xml
<CustomField>
    <fullName>Moment_Date__c</fullName>
    <label>Moment Date</label>
    <type>DateTime</type>
</CustomField>