unpackaged/main/default/objects/Multi_Touch_Attribution__c/fields/Moment_Email__c.field-meta.xml
<CustomField>
    <fullName>Moment_Email__c</fullName>
    <formula>Moment__r.Email_Formula__c</formula>
    <label>Moment Email</label>
    <type>Text</type>
</CustomField>