unpackaged/main/default/objects/Multi_Touch_Attribution__c/fields/Moment_Type__c.field-meta.xml
<CustomField>
    <fullName>Moment_Type__c</fullName>
    <formula>TEXT( Moment__r.Moment_Type__c )</formula>
    <label>Moment Type</label>
    <type>Text</type>
</CustomField>