unpackaged/main/default/objects/Multi_Touch_Attribution__c/fields/Moment_Type_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Moment_Type_Reporting__c</fullName>
    <formula>Moment__r.Moment_Type_Reporting__c</formula>
    <label>Moment Type Reporting</label>
    <type>Text</type>
</CustomField>