unpackaged/main/default/objects/Multi_Touch_Attribution__c/fields/MTA_Key__c.field-meta.xml
<CustomField>
    <fullName>MTA_Key__c</fullName>
    <externalId>true</externalId>
    <label>MTA Key</label>
    <length>32</length>
    <type>Text</type>
</CustomField>