unpackaged/main/default/objects/Multi_Touch_Attribution__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Multi-Touch Attributions</relationshipLabel>
    <relationshipName>Multi_Touch_Attributions</relationshipName>
    <type>Lookup</type>
</CustomField>