unpackaged/main/default/objects/Multi_Touch_Attribution__c/fields/Opportunity_Moments__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Moments__c</fullName>
    <label>Opportunity Moments</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>