unpackaged/main/default/objects/Multi_Touch_Attribution__c/fields/Opportunity_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Status__c</fullName>
    <formula>TEXT(Opportunity__r.StageName)</formula>
    <label>Opportunity Status</label>
    <type>Text</type>
</CustomField>