unpackaged/main/default/objects/Multi_Touch_Attribution__c/fields/Unweighted_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Unweighted_Pipeline__c</fullName>
    <label>Unweighted Pipeline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>